compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__arguments_list_for_type_which_requires_none_1.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "pub fn main() -> Int() {}"
---
----- SOURCE CODE
pub fn main() -> Int() {}

----- ERROR
error: Incorrect type constructor
  ┌─ /src/one/two.gleam:1:21
  │
1 │ pub fn main() -> Int() {}
  │                     ^^ You can remove this

`Int` has no type arguments, but here it's given an arguments list.
